@@ -210,6 +210,7 @@ Stefan Bodewig
 Stefano Mazzocchi
 Stephane Bailliez
 stephan
+Stephan Michels
 Stephen Chin
 Steve Cohen
 Steve Loughran
